argocd-services/k8s/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sunny
  name: luffy-deployment
  labels:
    app: luffy
spec:
  replicas: 6
