argocd-services/k8s/overlays/development/service-luffy.yaml
apiVersion: v1
kind: Service
metadata:
  name: luffy-service
  namespace: sunny
spec:
  selector:
    app: luffy
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: luffy-svc-port
      #nodePort: 30008
